--- a/template/cpage1.html
+++ b/template/cpage1.html
@@ -39,6 +39,8 @@
         .content_text_middle {
             width: 5.46875rem;
         }
+
+        .content_text_middle p1{vertical-align:text-bottom;}
         
         .header div {
             margin-left: 1em;
@@ -56,7 +58,7 @@
         .header div span {
             font: 300 .1175rem "Roboto";
             columns: #4a4a44;
-            line-height: 20px;
+            line-height: 120%;
         }
         
         .middle {
@@ -160,7 +162,7 @@
                 <p>Client</p>
                 <span>Vancouver Freeze Dry Ltd
                 </span>
-                <p><br> Y-2019</p>
+                <p><br><br><br> Y-2019</p>
             </div>
             <div class="content_text_right">
                 <p>Role</p>
@@ -177,7 +179,7 @@
                 <img src="../static/info (3).jpg" alt="">
             </div>
             <div class="part1">
-                <div class="item"><img src="../static/info (1).jpg" alt=""></div>
+               <!-- <div class="item"><img src="../static/info (1).jpg" alt=""></div>-->
                 <div class="item"><img src="../static/info (2).jpg" alt=""></div>
             </div>
             <div class="part2"><img src="../static/info (1).png" alt=""></div>
