--- a/template/cpage2.html
+++ b/template/cpage2.html
@@ -56,7 +56,7 @@
         .header div span {
             font: 300 .1175rem "Roboto";
             columns: #4a4a44;
-            line-height: 20px;
+            line-height: 122%;
         }
         
         .middle {
