--- a/css/tempalta.css
+++ b/css/tempalta.css
@@ -29,12 +29,14 @@
     width: 5.46875rem;
 }
 
+
+
 .header div {
     margin-left: 1em;
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 
 .header div p {
@@ -42,10 +44,12 @@
     color: black;
 }
 
+p1{vertical-align:text-bottom;}
+
 .header div span {
     font: 300 .1175rem "Roboto";
     columns: #4a4a44;
-    line-height: 20px;
+    line-height: 120%;
 }
 
 .middle {
