--- a/template/cpage1.html
+++ b/template/cpage1.html
@@ -38,8 +38,6 @@
         .content_text_middle {
             width: 5.46875rem;
         }
-
-        .content_text_middle p1{vertical-align:text-bottom;}
         
         .header div {
             margin-left: 1em;
@@ -57,7 +55,7 @@
         .header div span {
             font: 300 .1175rem "Roboto";
             columns: #4a4a44;
-            line-height: 120%;
+            line-height: 20px;
         }
         
         .middle {
@@ -71,14 +69,17 @@
         
         .middle .banner {
             margin-top: 100px;
+            padding-top: .625rem;
             width: 100%;
             height: 3000px;
             background-color: #777777;
         }
         
         .middle .banner img {
-            width: 100%;
-            height: 100%;
+            display: block;
+            margin: 0 auto;
+            /* width: 100%;
+            height: 100%; */
         }
         
         .middle .part1 {
@@ -123,25 +124,12 @@
         } */
         
         .other {
+            margin-top: 96px;
             font: 500 .125rem "Roboto";
             width: 84vw;
-            height: 25vw;
             margin: 0 auto;
-            margin-top: .1875rem;
+            height: 100px;
             line-height: 170px;
-            background-color: rgb(255, 255, 255);
-            display: flex;
-            justify-content: space-between;
-        }
-        
-        .other div {
-            width: 45%;
-            background-color: royalblue;
-        }
-        
-        .other img {
-            width: 100%;
-            height: 100%;
         }
         
         .foot {
@@ -161,8 +149,18 @@
             background-color: rgba(238, 238, 238);
         }
         
+        .foot .item img {
+            width: 99%;
+            height: 99%;
+        }
+        
+        .foot .item img:hover {
+            width: 100%;
+            height: 100%;
+        }
+        
         .foot .item:hover {
-            background-color: #fff100;
+            /* background-color: #fff100; */
         }
     </style>
 </head>
@@ -183,7 +181,7 @@
                 <p>Client</p>
                 <span>Vancouver Freeze Dry Ltd
                 </span>
-                <p><br><br><br> Y-2019</p>
+                <p><br> Y-2019</p>
             </div>
             <div class="content_text_right">
                 <p>Role</p>
@@ -197,7 +195,7 @@
                 <img src="../static/info (3).jpg" alt="">
             </div>
             <div class="part1">
-               <!-- <div class="item"><img src="../static/info (1).jpg" alt=""></div>-->
+                <div class="item"><img src="../static/info (1).jpg" alt=""></div>
                 <div class="item"><img src="../static/info (2).jpg" alt=""></div>
             </div>
             <div class="part2"><img src="../static/info (1).png" alt=""></div>
@@ -205,13 +203,11 @@
             <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
         </div>
         <!-- 底部 -->
-        <div class="other" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-            <div><img src="../static/other.png" alt=""></div>
-            <div><img src="../static/other.png" alt=""></div>
+        <div class="other">Other Projects
         </div>
         <div class="foot" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-            <div class="item"></div>
-            <div class="item"></div>
+            <div class="item"><img src="../static/other.png" alt=""></div>
+            <div class="item"><img src="../static/other.png" alt=""></div>
             <div class="item"></div>
             <div class="item"></div>
             <div class="item"></div>
