--- a/template/cpage1.html
+++ b/template/cpage1.html
@@ -34,12 +34,12 @@
             /* border: 1px solrgb(29, 28, 80)68); */
             background-color: white;
         }
-        
+
+
         .content_text_middle {
             width: 5.46875rem;
         }
 
-        .content_text_middle p1{vertical-align:text-bottom;}
         
         .header div {
             margin-left: 1em;
@@ -47,7 +47,10 @@
             flex-direction: column;
             align-items: start;
             justify-content: flex-start;
+
         }
+
+
         
         .header div p {
             font: 500 .125rem "Roboto";
@@ -57,12 +60,12 @@
         .header div span {
             font: 300 .1175rem "Roboto";
             columns: #4a4a44;
-            line-height: 120%;
+            line-height: 135%;
         }
         
         .middle {
             box-sizing: content-box;
-            width: 84vw;
+            width: 92vw;
             margin-top: 100px;
             margin: 0 auto;
             /* 子页面背景 */
@@ -172,11 +175,8 @@
         <!--头部 -->
         <div class="header">
             <div class="content_text_left">
-                <p>Fruit Chrew Package Serise </p>
-                <span>A product’s packaging should appeal to its ideal consumer; it’s important to know who that
-                    consumer is before you start the design process. Products for older adults may need larger text.
-                    Alternatively, items geared towards an aﬄuent customer will need to consider materials that create a
-                    feeling of luxury.
+                <p>Child Gain Chews</p>
+                <span>The product is aimed at the nutrition and health of children from 1 to 12 years old. It uses freeze-dried fruits and vegetables as raw materials to develop a non-damaging snack. I participated in the research and development and promotion of this original product throughout the entire process, such as the accounting of production costs, material printing, transportation and export costs, and established wholesale prices, retail prices, import and export prices, and so on. According to the characteristics of the product, according to my brand and marketing strategy after redefining, I selected 5 different animals that are most popular with children, carried out creative character design, and based on this, independently designed the visual system and packaging of the product. This includes independent packaging of products, retail store display packaging, and value sets. Communicating and supervising the printing of materials throughout the process, and guided the animated promotional videos of this series of products, which were broadcast at the ciie 2019 exhibition
                 </span>
             </div>
             <div class="content_text_middle">
@@ -186,8 +186,11 @@
                 <p><br><br><br> Y-2019</p>
             </div>
             <div class="content_text_right">
-                <p>Role</p>
-                <span>Charactor Design Packaging Food Label regulation Box Layout
+                       <p>Role</p>
+                <span>Charactor Design </span>
+                <span>Packaging </span>
+                <span>Food Label regulation </span>
+                <span>Box Layout</span>
                 </span>
             </div>
         </div>
