--- a/template/cpage1.html
+++ b/template/cpage1.html
@@ -16,7 +16,7 @@
         
          ::selection {
             background: #fff100;
-            color: rgb(255, 255, 255);
+            color: rgb(0, 0, 0);
         }
         
         .cpage {
@@ -27,7 +27,7 @@
         
         .header {
             padding-top: .438rem;
-            padding-bottom: 100px;
+            padding-bottom: 0.25rem;
             width: 100%;
             display: flex;
             justify-content: space-between;
@@ -37,7 +37,11 @@
 
 
         .content_text_middle {
-            width: 5.46875rem;
+            width: 8rem;
+        }
+
+         .content_text_right {
+            width: 8rem;
         }
         
         .header div {
@@ -54,10 +58,11 @@
         .header div p {
             font: 500 .125rem "Roboto";
             color: black;
+            text-height:130%;
         }
         
         .header div span {
-            font: 300 .1175rem "Roboto";
+            font: 300 .1rem "Roboto";
             columns: #4a4a44;
             line-height: 135%;
         }
@@ -72,8 +77,8 @@
         }
         
         .middle .banner {
-            margin-top: 100px;
-            padding-top: .625rem;
+            margin-top: .35rem;
+            padding-top: .325rem;
             width: 100%;
             height: 3000px;
             background-color: #777777;
@@ -182,7 +187,7 @@
                 <p>Client</p>
                 <span>Vancouver Freeze Dry Ltd
                 </span>
-                <p><br> Y-2019</p>
+                <p><br><br> Y-2019</p>
             </div>
             <div class="content_text_right">
                        <p>Role</p>
