--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body::-moz-selection {
 
 .header {
     width: 90vw;
-    height: .425rem;
+    height: .275rem;
     margin: 0px auto;
     /* border: 1px solid red; */
     display: flex;
@@ -44,7 +44,7 @@ body::-moz-selection {
 
 .left_block {
     width: .0625rem;
-    height: .625rem;
+    height: .6rem;
     margin-left: 5vw;
     margin-top: 0.25 rem;
     /* background-color: aqua; */
@@ -54,7 +54,7 @@ body::-moz-selection {
 }
 
 .left_block div:nth-child(1) {
-    height: .175rem;
+    height: .15rem;
     background-color: black;
 }
 
@@ -131,12 +131,12 @@ body::-moz-selection {
 .tab_work .top {
     position: absolute;
     z-index: 110;
-    font-size: .625rem;
+    font-size: .63rem;
 }
 
 .tab_work .under {
     z-index: -110;
-    font-size: .625rem;
+    font-size: .63rem;
 }
 
 .tab_work .tab_bar {
@@ -153,7 +153,7 @@ body::-moz-selection {
 .left {
     display: none;
     /* display: block; */
-    width: 20vw;
+    width: 16vw;
     height: 99vh;
     /* border: 1px solid red; */
     background-color: #0d0b0b;
@@ -170,7 +170,7 @@ body::-moz-selection {
 
 .left_bar {
     width: 100%;
-    height: 40vh;
+    height: 35vh;
     /* border: 1px solid green; */
     position: absolute;
     bottom: 0;
@@ -183,21 +183,22 @@ body::-moz-selection {
 
 .left_bar span {
     text-align: left;
-    margin-top: .05rem;
-    color: #494949;
+    margin-top: .035rem;
+    color: #787878;
     font: 400 14px "Roboto";
     /* background-color: greenyellow; */
+    text-height:100%;
 }
 
 .left_bar p {
     margin-top: 10px;
     font: 500 20px "Oswald";
-    color: #4a4a4a;
+    color: #303030;
 }
 
 .left_bar span.active {
     font: 500 14px "Roboto";
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     background-color: #fff100;
     opacity: 0.88;
 }
@@ -259,9 +260,9 @@ body::-moz-selection {
     display: block;
     height: .125rem;
     color: rgb(255, 255, 255);
-    text-indent: .1rem;
-    margin-top: -7px;
-    margin-left: -0.54rem;
+    text-indent: .38rem;
+    margin-top: -20px;
+    margin-left: -0.5rem;
 }
 
 .back_home p span:nth-child(1) {
