--- a/template/CiiE2019Shanghai.html
+++ b/template/CiiE2019Shanghai.html
@@ -36,14 +36,11 @@
         }
 
 
-        .content_text_middle {
-            width: 8rem;
+        .content_text_right {
+            width: 5rem;
         }
 
-         .content_text_right {
-            width: 8rem;
-        }
-        
+
         .header div {
             margin-left: 1em;
             display: flex;
@@ -180,23 +177,21 @@
         <div class="header">
             <div class="content_text_left">
                 <p>CIIE 2019 Shanghai</p>
-                <span>On behalf of the former employer, I planned and executed the exhibition project of the second China Import and Export Expo (ciie 2019 shanghai). In the early stage of the exhibition, I was in Canada, and the organizer of the exhibition, relevant personnel of the Chinese government, and budget Under the circumstances, a suitable exhibition contractor was found, and guided and supervised to determine the booth style, exhibit transportation, booth construction, project progress and other related procedures. And independently produced and delivered the related banners, light boxes, posters, brochures, gift bags and other visual promotional materials needed for the exhibition. In addition, I independently carried out the layout of the 36 square meter booth and maintenance work during the exhibition. In this exhibition, more than 30 exhibits were displayed, and product recommendations or service exchanges were conducted with more than 200 exhibitors, which enabled the exhibition to achieve the greatest publicity effect.
-                </span>
+                <span>On behalf of the company, planned and executed CIIE 2019 exhibition projects, from preparation, details determination, booth design, supervised of construction, event arrangement, created promotional materials, to exhibition services and customer development and communication. In this exhibition, more than 32 products were displayed in exhibits, and conducted product recommendations or service exchanges with more than 500 exhibitors, which enabled the exhibition to achieve the greatest publicity effect.</span>
+                <span><br>Work details available upon request.</span>
             </div>
-            <div class="content_text_middle">
+            <div class="content_text_right">
                 <p>Client</p>
                 <span>Vancouver Freeze Dry Ltd
                 </span>
-                <p><br><br> Y-2019</p>
-            </div>
-            <div class="content_text_right">
-                       <p>Role</p>
+                <p><br>Role</p>
                 <span>Brand execution </span>
                 <span>Project Management </span>
                 <span>Exhibition Service </span>
                 <span>Customer Development</span>
                 </span>
             </div>
+
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
