--- a/template/OffiskyBusinessPhoneSystem.html
+++ b/template/OffiskyBusinessPhoneSystem.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
     <!-- <link rel="stylesheet" href="../css/tempalta.css"> -->
-    <title>Child Gain Chews</title>
+    <title>Offisky Business Phone System</title>
     <style>
         * {
             padding: 0;
@@ -35,13 +35,9 @@
             background-color: white;
         }
 
-
-        .content_text_right{
-             width: 5rem;
-
+         .content_text_right {
+            width: 5rem;
         }
-
-
         
         .header div {
             margin-left: 1em;
@@ -77,9 +73,10 @@
         
         .middle .banner {
             margin-top: .35rem;
-            padding-top: .625rem;
+            padding-top: .325rem;
             width: 100%;
-            background-color: #D0D0D0;
+            height: 3000px;
+            background-color: #777777;
         }
         
         .middle .banner img {
@@ -121,7 +118,7 @@
         
         .part3 {
             width: 100%;
-            height: 12.5rem;
+            height: 100%;
             background-color: rgba(238, 238, 238);
             margin-top: .195313rem;
         }
@@ -140,7 +137,7 @@
         }
         
         .foot {
-            width: 92vw;
+            width: 92vm;
             margin: 0 auto;
             margin-top: .1875rem;
             margin-bottom: 66px;
@@ -177,30 +174,25 @@
         <!--头部 -->
         <div class="header">
             <div class="content_text_left">
-                <p>Child Gain Chews</p>
-                <span>This series of products is an original R&B of freeze-dried nutritional snacks for children aged 1-12. I have participated in product development from the product conception stage to market research, brand positioning, cost accounting, price management and marketing strategies, brand image etc. Furthermore, I directed attractive cartoon characters’ processes, and independently designed a wide range of visual systems and different specifications of packaging with supervising overseas printing and transportation，and oversee and guided the production and release of marketing collaterals.</span>
+                <p>Offisky Business Phone System</p>
+                <span>Offisky is a commercial telephone system platform that adapts to the entire platform, and allowing customers flexibly to set up their own commercial telephone systems without the need to purchase additional commercial telephones and special telephone lines. As the commercial telephone system is a more traditional field, I used the form of motion graphic to produce cross-platform video promotional materials, and briefly introduced several functions of the Offisky platform to attract the user.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
                 <p>Client</p>
-                <span>Vancouver Freeze Dry Ltd
-                </span>
+                <span>Babysoft Corporation</span>
                 <p><br>Role</p>
                 <span>Charactor Design </span>
                 <span>Packaging </span>
                 <span>Food Label regulation </span>
                 <span>Box Layout</span>
                 </span>
-
-            </div>
-
-
             </div>
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-            <div class="banner">
-                <img src="../static/info (3).png" alt="">
+            <!--<div class="banner">
+                <img src="../static/info (3).jpg" alt="">
             </div>
             <div class="part1">
                 <div class="item"><img src="../static/info (1).jpg" alt=""></div>
@@ -208,9 +200,9 @@
             </div>
             <div class="part2"><img src="../static/info (1).png" alt=""></div>
             <!-- 自动播放autoplay=1 -->
-            <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
+            <div class="part3"><iframe width="1220" height="800" src="https://www.youtube.com/embed/GrDKt7NwfPs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
-        <!-- 底部 -->
+        <!-- 底部
         <div class="other">Other Projects
         </div>
         <div class="foot" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
@@ -220,7 +212,7 @@
             <div class="item"></div>
             <div class="item"></div>
             <div class="item"></div>
-        </div>
+        </div>-->
     </div>
 </body>
 
