--- a/template/TheTributetoClassic.html
+++ b/template/TheTributetoClassic.html
@@ -36,13 +36,11 @@
         }
 
 
-        .content_text_middle {
-            width: 8rem;
+        .content_text_right {
+            width: 6rem;
         }
 
-         .content_text_right {
-            width: 8rem;
-        }
+
         
         .header div {
             margin-left: 1em;
@@ -135,14 +133,14 @@
         .other {
             margin-top: 96px;
             font: 500 .125rem "Roboto";
-            width: 84vw;
+            width: 92vw;
             margin: 0 auto;
             height: 100px;
             line-height: 170px;
         }
         
         .foot {
-            width: 84vw;
+            width: 92vw;
             margin: 0 auto;
             margin-top: .1875rem;
             margin-bottom: 66px;
@@ -180,22 +178,28 @@
         <div class="header">
             <div class="content_text_left">
                 <p>The Tribute to Classic</p>
-                <span>Corn, blueberries, cherries are the classic choice for frozen fruits and vegetables, customers have used a different 2 series, a total of 4 products to sell, the existence of product image is not attractive, product packaging production costs are too high, sales strategy is not clear and so on. After my in-depth communication and learning with the production department, I have carried out product optimization and reform. First of all, I integrated 2 series for 1 series of products, optimized packaging methods and materials, effectively reducing the cost of 32% of the products on the packaging. Under the premise of product cost control and budget, re-combing the market positioning of the product, brand positioning, price details and so on. Then, with classic fruits and vegetables to pay tribute to the world's famous paintings, with the creation of comics to create a new and fashionable light image, independent completion of this series of visual design, packaging design, related promotional materials, and delivery printing, supervision of the quality of the finished product.</span>
-            </div>
-            <div class="content_text_middle">
-                <p>Client</p>
-                <span>Vancouver Freeze Dry Ltd
-                </span>
-                <p><br><br> Y-2019</p>
+                <span>The customer selected the fruits and vegetables commonly used in freeze-drying packaging to make 2 series / 4 single products. After in-depth communication and learning with product development and sales departments, I redefined the concept of the product, optimized the packaging form methods and materials, and reduced the product costs and budget, and reorganized market strategy. Paying tribute to the world's famous paintings with the classic selection of freeze-drying technology, the comic style has created a new and fashionable brand image of the brand, independently designed the images, visiual, packaging design and related promotional materials of this series, and delivered it for printing and transportation.</span>
+                <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
+                <p>Client</p>
+                <span>Vancouver Freeze Dry Ltd</span>
+
+                <p><br>Role</p>
+                <span>Charactor Design </span>
+                <span>Packaging </span>
+                <span>Food Label regulation </span>
+                <span>Box Layout</span>
+
+            </div>
+           <!-- <div class="content_text_right">
                        <p>Role</p>
                 <span>Charactor Design </span>
                 <span>Packaging </span>
                 <span>Food Label regulation </span>
                 <span>Box Layout</span>
                 </span>
-            </div>
+            </div>-->
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
