--- a/template/BaiduAntivirusWebsite.html
+++ b/template/BaiduAntivirusWebsite.html
@@ -36,12 +36,11 @@
         }
 
 
-        .content_text_right{
-             width: 5rem;
 
+
+         .content_text_right {
+            width: 3rem;
         }
-
-
         
         .header div {
             margin-left: 1em;
@@ -77,9 +76,10 @@
         
         .middle .banner {
             margin-top: .35rem;
-            padding-top: .625rem;
+            padding-top: .325rem;
             width: 100%;
-            background-color: #D0D0D0;
+            height: 3000px;
+            background-color: #777777;
         }
         
         .middle .banner img {
@@ -133,14 +133,14 @@
         .other {
             margin-top: 96px;
             font: 500 .125rem "Roboto";
-            width: 92vw;
+            width: 84vw;
             margin: 0 auto;
             height: 100px;
             line-height: 170px;
         }
         
         .foot {
-            width: 92vw;
+            width: 84vw;
             margin: 0 auto;
             margin-top: .1875rem;
             margin-bottom: 66px;
@@ -177,30 +177,25 @@
         <!--头部 -->
         <div class="header">
             <div class="content_text_left">
-                <p>Child Gain Chews</p>
-                <span>This series of products is an original R&B of freeze-dried nutritional snacks for children aged 1-12. I have participated in product development from the product conception stage to market research, brand positioning, cost accounting, price management and marketing strategies, brand image etc. Furthermore, I directed attractive cartoon characters’ processes, and independently designed a wide range of visual systems and different specifications of packaging with supervising overseas printing and transportation，and oversee and guided the production and release of marketing collaterals.</span>
+                <p>Baidu Antivirus Website</p>
+                <span>This project is to promote and download Baidu Antivires in overseas markets. The entire website is composed of product introductions, downloads, and web games. In this project, I was responsible for game character design, website design, user interaction, game flow design and visual effects etc.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
                 <p>Client</p>
-                <span>Vancouver Freeze Dry Ltd
-                </span>
+                <span>Baidu Antivirus</span>
                 <p><br>Role</p>
-                <span>Charactor Design </span>
-                <span>Packaging </span>
-                <span>Food Label regulation </span>
-                <span>Box Layout</span>
+                <span>Character Design </span>
+                <span>UI </span>
+                <span>UE</span>
+                <span>Web Design</span>
                 </span>
-
-            </div>
-
-
             </div>
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
             <div class="banner">
-                <img src="../static/info (3).png" alt="">
+                <img src="../static/info (3).jpg" alt="">
             </div>
             <div class="part1">
                 <div class="item"><img src="../static/info (1).jpg" alt=""></div>
