--- a/template/Posters.html
+++ b/template/Posters.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
     <!-- <link rel="stylesheet" href="../css/tempalta.css"> -->
-    <title>Child Gain Chews</title>
+    <title> Posters I ~ IV</title>
     <style>
         * {
             padding: 0;
@@ -36,12 +36,13 @@
         }
 
 
-        .content_text_right{
-             width: 5rem;
-
+        .content_text_middle {
+            width: 8rem;
         }
 
-
+         .content_text_right {
+            width: 8rem;
+        }
         
         .header div {
             margin-left: 1em;
@@ -77,9 +78,10 @@
         
         .middle .banner {
             margin-top: .35rem;
-            padding-top: .625rem;
+            padding-top: .325rem;
             width: 100%;
-            background-color: #D0D0D0;
+            height: 3000px;
+            background-color: #777777;
         }
         
         .middle .banner img {
@@ -133,14 +135,14 @@
         .other {
             margin-top: 96px;
             font: 500 .125rem "Roboto";
-            width: 92vw;
+            width: 84vw;
             margin: 0 auto;
             height: 100px;
             line-height: 170px;
         }
         
         .foot {
-            width: 92vw;
+            width: 84vw;
             margin: 0 auto;
             margin-top: .1875rem;
             margin-bottom: 66px;
@@ -177,30 +179,26 @@
         <!--头部 -->
         <div class="header">
             <div class="content_text_left">
-                <p>Child Gain Chews</p>
-                <span>This series of products is an original R&B of freeze-dried nutritional snacks for children aged 1-12. I have participated in product development from the product conception stage to market research, brand positioning, cost accounting, price management and marketing strategies, brand image etc. Furthermore, I directed attractive cartoon characters’ processes, and independently designed a wide range of visual systems and different specifications of packaging with supervising overseas printing and transportation，and oversee and guided the production and release of marketing collaterals.</span>
+                <p> Posters I ~ IV </p>
+                <span>This is a collection based on graphic/visual communication, including the posters, banners, billboard, app launch screen ad, H5 adversting, brochure that I have designed.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
-                <p>Client</p>
-                <span>Vancouver Freeze Dry Ltd
+                      <p>Client</p>
+                <span>Multiple
                 </span>
-                <p><br>Role</p>
+                       <p><br>Role</p>
                 <span>Charactor Design </span>
                 <span>Packaging </span>
                 <span>Food Label regulation </span>
                 <span>Box Layout</span>
                 </span>
-
-            </div>
-
-
             </div>
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
             <div class="banner">
-                <img src="../static/info (3).png" alt="">
+                <img src="../static/info (3).jpg" alt="">
             </div>
             <div class="part1">
                 <div class="item"><img src="../static/info (1).jpg" alt=""></div>
