--- a/template/SpaceSnack.html
+++ b/template/SpaceSnack.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
     <!-- <link rel="stylesheet" href="../css/tempalta.css"> -->
-    <title>Child Gain Chews</title>
+    <title>Space Snack Packaging</title>
     <style>
         * {
             padding: 0;
@@ -37,8 +37,7 @@
 
 
         .content_text_right{
-             width: 5rem;
-
+            width: 5rem;
         }
 
 
@@ -77,9 +76,10 @@
         
         .middle .banner {
             margin-top: .35rem;
-            padding-top: .625rem;
+            padding-top: .325rem;
             width: 100%;
-            background-color: #D0D0D0;
+            height: 3000px;
+            background-color: #777777;
         }
         
         .middle .banner img {
@@ -133,14 +133,14 @@
         .other {
             margin-top: 96px;
             font: 500 .125rem "Roboto";
-            width: 92vw;
+            width: 84vw;
             margin: 0 auto;
             height: 100px;
             line-height: 170px;
         }
         
         .foot {
-            width: 92vw;
+            width: 84vw;
             margin: 0 auto;
             margin-top: .1875rem;
             margin-bottom: 66px;
@@ -177,30 +177,25 @@
         <!--头部 -->
         <div class="header">
             <div class="content_text_left">
-                <p>Child Gain Chews</p>
-                <span>This series of products is an original R&B of freeze-dried nutritional snacks for children aged 1-12. I have participated in product development from the product conception stage to market research, brand positioning, cost accounting, price management and marketing strategies, brand image etc. Furthermore, I directed attractive cartoon characters’ processes, and independently designed a wide range of visual systems and different specifications of packaging with supervising overseas printing and transportation，and oversee and guided the production and release of marketing collaterals.</span>
+                <p>Space Snack</p>
+                <span>Space snack is a product that has been sold in the market. According to the current sales situation, while maintaining the product image, I reuse the existing visual graphics of the product, develop and design other packaging display forms, and according to the requirements of different sellers as Dollarama, customized its packaging.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
                 <p>Client</p>
-                <span>Vancouver Freeze Dry Ltd
-                </span>
+                <span>Vancouver Freeze Dry Ltd</span>
                 <p><br>Role</p>
-                <span>Charactor Design </span>
+                <span>Brand Identity </span>
                 <span>Packaging </span>
-                <span>Food Label regulation </span>
+                <span>Food Label Regulation </span>
                 <span>Box Layout</span>
-                </span>
-
-            </div>
-
 
             </div>
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
             <div class="banner">
-                <img src="../static/info (3).png" alt="">
+                <img src="../static/info (3).jpg" alt="">
             </div>
             <div class="part1">
                 <div class="item"><img src="../static/info (1).jpg" alt=""></div>
