--- a/template/CiiE2019Shanghai.html
+++ b/template/CiiE2019Shanghai.html
@@ -21,7 +21,7 @@
         
         .cpage {
             width: 100%;
-            height: 100%;
+            height: auto;
             /* border: 1px solid green; */
         }
         
@@ -66,20 +66,18 @@
         
         .middle {
             box-sizing: content-box;
-            width: 92vw;
-            margin-top: 100px;
+            width: 100vw;
+            margin-top: 0px;
             margin: 0 auto;
             /* 子页面背景 */
             background-color: #ffffff;
         }
         
-        .middle .banner {
-            margin-top: .35rem;
-            padding-top: .325rem;
+        /*.middle .banner {
             width: 100%;
             height: 3000px;
             background-color: #777777;
-        }
+        }*/
         
         .middle .banner img {
             display: block;
@@ -185,7 +183,7 @@
                 <span>Vancouver Freeze Dry Ltd
                 </span>
                 <p><br>Role</p>
-                <span>Brand execution </span>
+                <span>Event Execution </span>
                 <span>Project Management </span>
                 <span>Exhibition Service </span>
                 <span>Customer Development</span>
@@ -196,16 +194,16 @@
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
             <div class="banner">
-                <img src="../static/info (3).jpg" alt="">
-            </div>
+            <img src="../static/CIIE2019.png" alt="">
+           <!--中间内容  </div>
             <div class="part1">
-                <div class="item"><img src="../static/info (1).jpg" alt=""></div>
-                <div class="item"><img src="../static/info (2).jpg" alt=""></div>
+                <div class="item"><img src="../static/CIIE1.png" alt=""></div>
+                <div class="item"><img src="../static/CIIE1.png" alt=""></div>
             </div>
-            <div class="part2"><img src="../static/info (1).png" alt=""></div>
-            <!-- 自动播放autoplay=1 -->
+            <div class="part2"><img src="../static/info (1).png" alt=""></div>-->
+            <!-- 自动播放autoplay=1
             <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
-        </div>
+        </div>-->
         <!-- 底部
         <div class="other">Other Projects
         </div>
@@ -215,8 +213,7 @@
             <div class="item"></div>
             <div class="item"></div>
             <div class="item"></div>
-            <div class="item"></div>
-        </div>-->
+            <div class="item"></div>-->
     </div>
 </body>
 
