--- a/template/BaiduAntivirusWebsite.html
+++ b/template/BaiduAntivirusWebsite.html
@@ -78,7 +78,7 @@
             margin-top: .35rem;
             padding-top: .325rem;
             width: 100%;
-            height: 3000px;
+            height: Auto;
             background-color: #777777;
         }
         
@@ -97,7 +97,7 @@
         
         .part1 .item {
             width: 48%;
-            height: 2.734375rem;
+            height: Auto;
             background-color: #777777;
         }
         
@@ -108,7 +108,7 @@
         
         .part2 {
             width: 100%;
-            height: 6.25rem;
+            height: Auto;
             background-color: rgba(238, 238, 238);
             margin-top: .195313rem;
             margin-top: .390625rem;
@@ -133,14 +133,14 @@
         .other {
             margin-top: 96px;
             font: 500 .125rem "Roboto";
-            width: 84vw;
+            width: 92vw;
             margin: 0 auto;
             height: 100px;
             line-height: 170px;
         }
         
         .foot {
-            width: 84vw;
+            width: 92vw;
             margin: 0 auto;
             margin-top: .1875rem;
             margin-bottom: 66px;
@@ -194,17 +194,24 @@
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-            <div class="banner">
-                <img src="../static/info (3).jpg" alt="">
+            <!--<div class="banner">
+                <img src="../static/Baidu/Baidu1.png" alt="">
             </div>
-            <div class="part1">
-                <div class="item"><img src="../static/info (1).jpg" alt=""></div>
-                <div class="item"><img src="../static/info (2).jpg" alt=""></div>
-            </div>
-            <div class="part2"><img src="../static/info (1).png" alt=""></div>
-            <!-- 自动播放autoplay=1 -->
+            -->
+             <div class="part2"><img src="../static/Baidu/Baidu1.png" alt=""></div>
+            <div class="part2"><img src="../static/Baidu/Baidu2.png" alt=""></div>
+             <div class="part1">
+                <div class="item"><img src="../static/Baidu/Baidu3.png" alt=""></div>
+             </div>
+                <div class="part1">
+                <div class="item"><img src="../static/Baidu/Baidu4.png" alt=""></div>
+             </div>
+            <div class="part2"><img src="../static/Baidu/baidu.gif" alt=""></div>
+
+
+            <!-- 自动播放autoplay=1
             <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
-        </div>
+        </div>-->
         <!-- 底部 -->
         <div class="other">Other Projects
         </div>
