--- a/template/BoumiMonitorApp.html
+++ b/template/BoumiMonitorApp.html
@@ -194,16 +194,18 @@
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-            <div class="banner">
+            <!--<div class="banner">
                 <img src="../static/info (3).jpg" alt="">
             </div>
             <div class="part1">
-                <div class="item"><img src="../static/info (1).jpg" alt=""></div>
+                <div class="item"><img src="../static/Boumi/Boumi1.png" alt=""></div>
                 <div class="item"><img src="../static/info (2).jpg" alt=""></div>
             </div>
             <div class="part2"><img src="../static/info (1).png" alt=""></div>
             <!-- 自动播放autoplay=1 -->
-            <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
+            <div class="part3"><img src="../static/Boumi/Boumi1.png" alt=""></div>
+            <div class="part3"><img src="../static/Boumi/Boumi2.png" alt=""></div>
+            <div class="part3"><img src="../static/Boumi/Boumi3.png" alt=""></div>
         </div>
         <!-- 底部 -->
         <div class="other">Other Projects
