--- a/template/ChildGainChews.html
+++ b/template/ChildGainChews.html
@@ -97,18 +97,18 @@
         
         .part1 .item {
             width: 48%;
-            height: 2.734375rem;
+            height: Auto;
             background-color: #777777;
         }
         
         .part1 .item img {
             width: 100%;
-            height: 100%;
+            height: Auto;
         }
         
         .part2 {
             width: 100%;
-            height: 6.25rem;
+            height: Auto;
             background-color: rgba(238, 238, 238);
             margin-top: .195313rem;
             margin-top: .390625rem;
@@ -200,16 +200,21 @@
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
             <div class="banner">
-                <img src="../static/info (3).png" alt="">
+                <div class="item"><img src="../static/ChildGainChews/childchews1.png" alt=""></div>
+                <div class="item"><img src="../static/ChildGainChews/childchews2.png" alt=""></div></div>
+                <!--<img src="../static/info (3).png" alt="">
             </div>
             <div class="part1">
                 <div class="item"><img src="../static/info (1).jpg" alt=""></div>
                 <div class="item"><img src="../static/info (2).jpg" alt=""></div>
             </div>
-            <div class="part2"><img src="../static/info (1).png" alt=""></div>
-            <!-- 自动播放autoplay=1 -->
+            <div class="part2"><img src="../static/ChildGainChews/childchews1.png" alt=""></div>
+            <div class="part2"><img src="../static/ChildGainChews/childchews2.png" alt=""></div>-->
+            <div class="part1">
+                 <div class="item"><img src="../static/ChildGainChews/childchews4.png" alt=""></div></div>
+            <!-- 自动播放autoplay=1
             <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
-        </div>
+        </div>-->
         <!-- 底部 -->
         <div class="other">Other Projects
         </div>
