--- a/template/Posters.html
+++ b/template/Posters.html
@@ -80,8 +80,7 @@
             margin-top: .35rem;
             padding-top: .325rem;
             width: 100%;
-            height: 3000px;
-            background-color: #777777;
+            height: 100%;
         }
         
         .middle .banner img {
@@ -99,7 +98,7 @@
         
         .part1 .item {
             width: 48%;
-            height: 2.734375rem;
+            height: 100%;
             background-color: #777777;
         }
         
@@ -110,7 +109,7 @@
         
         .part2 {
             width: 100%;
-            height: 6.25rem;
+            height: Auto;
             background-color: rgba(238, 238, 238);
             margin-top: .195313rem;
             margin-top: .390625rem;
@@ -198,15 +197,24 @@
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
             <div class="banner">
-                <img src="../static/info (3).jpg" alt="">
+                <p>Posters I</p>
+                <img src="../static/Posters/Poster1.png" alt="">
+                <p>Posters II</p>
+                <img src="../static/Posters/Poster2.png" alt="">
+                 <p>Posters III</p>
+                <img src="../static/Posters/LaunchScreenAD.png" alt="">
+                <p>Posters IIV</p>
+                <img src="../static/Posters/Standbanner.png" alt="">
             </div>
-            <div class="part1">
+
+
+           <!-- <div class="part1">
                 <div class="item"><img src="../static/info (1).jpg" alt=""></div>
                 <div class="item"><img src="../static/info (2).jpg" alt=""></div>
             </div>
             <div class="part2"><img src="../static/info (1).png" alt=""></div>
-            <!-- 自动播放autoplay=1 -->
-            <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
+             <!--自动播放autoplay=1
+            <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div> -->
         </div>
         <!-- 底部 -->
         <div class="other">Other Projects
